--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="inputBox" placeholder="0" >
+        <input type="text" id="inputBox" placeholder="0" class="input btn-41" >
 
         <!-- <div>
 
@@ -50,7 +50,7 @@
         </div>
         <div>
 
-            <button> +/- </button>
+            <button>+/-</button>
             <button>0</button>
             <button>.</button>
             <button class="equal">=</button>
