Adding my github profile with beautiful animation .

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             <button class="equal">=</button>
 
         </div>
+
+        <div>
+        </div>
+    </div>
+    
+    <div id="Profile">
+       <a href="https://github.com/JaiminPatel345" class="bn5"> My Github Profile  </a> 
     </div>
     <script src="app.js"></script>
 </body>
